Se realizaron los sedder y el filtrado de datos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -330,3 +330,6 @@ body {
     object-fit: cover;        /* La imagen se adapta sin deformarse */
     border-radius: 15px;      /* Borde redondeado */
 }
+
+
+/* PAginacion */
